fix: scrollbar bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,7 +48,7 @@
   }
 
   body {
-    @apply overflow-scroll bg-gray-100;
+    @apply bg-gray-100;
   }
   /* #region  /**=========== Typography =========== */
   .h0 {
